Sun Dec 14 20:57:46 1997  Ray Lehtiniemi  <rayl@localhost>

	* app/blend.c fixed cores when using custom gradients with
	  offset of 100

Sun Dec 14 16:56:33 PST 1997 Manish Singh <yosh@gimp.org>

	* backed out of the tools fix, cause problems with
	rmb script-fu

Sun Dec 14 03:41:27 PST 1997 Manish Singh <yosh@gimp.org>

	* Support for dithering to custom palettes

	* a proper PDB entry for indexed conversion
	(gimp-convert-indexed-palette)

Sun Dec 14 00:08:00 PST 1997 Raph Levien <raph@acm.org>
	* a minor patch to make the file selection dialog not always
	select the first file in a directory

Sat Dec 13 23:37:59 PST 1997 Manish Singh <yosh@gimp.org>

	* mkbrush.scm updated

	* Added support for tooltips in preferences

Sun Dec 14 00:06:00 CST 1997 Shawn T. Amundson <amundson@gimp.org>

	* configure.in: Changed gimp lib dir to lib/gimp/MAJOR.MINOR 
          instead of lib/gimp/MAJOR.MINOR.MICRO
	* script-fu/scripts: removed piechart, kanji-circle, kanji-neon 
	* configure.in: change check for EMACS to allow emacs to not 
          exist (in which case, no error results, but pdb docs don't
          get made)

Sat Dec 13 19:41:35 CST 1997 Shawn T. Amundson <amundson@gimp.org>
	
	* plug-ins/fuse/Makefile.am: fuse.c couldn't find gck/gck.h

Fri Dec 12 02:07:26 PST 1997 Manish Singh <yosh@gimp.org>

	* Updated gif and animationplay with the new versions

Thu Dec 11 20:56:09 PST 1997 Manish Singh <yosh@gimp.org>

	* Removed dgimp (it never worked anyway)

Wed Dec 10 16:59:56 PST 1997 Manish Singh <yosh@gimp.org>

	* Added gimprc option for enabling/disabling tooltips

	* Fixed up about dialog

	* Added Fractaltrace plugin

Tue Dec  9 15:26:48 PST 1997 Manish Singh <yosh@gimp.org>

	* Added Lauri Alanko's tools patch

	* Clarified the units in the tile cache size field in the
	preferences dialog

Tue Dec  9 15:21:16 PST 1997 Raph Levien <raph@acm.org>

	* app/gimprc.c, app/commands.c: committed the preferences patch I